<resources>
    <string name="app_name">AdminDivinePolytechnic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_rankings">Rankings</string>
    <string name="menu_slideshow">LoremTemplate</string>

    <string name="reset_password">Reset Password</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="loading">Please wait...</string>
    <string name="no_internet">Check Internet Connection</string>

    <string name="retry">Retry</string>
    <string name="close">Close</string>
    <string name="resend_timer">Resend in : %1$s</string>
    <string name="email_sent_failed">Failed to send email :  %1$s</string>

    <string name="reset_password_instructions">Reset Password instructions has been sent on email :  %1$s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_subjects">Subjects</string>
    <string name="title_lessons">Lessons</string>

</resources>