<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.s2dioapps.admindivinepolytechnic.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.s2dioapps.admindivinepolytechnic.ui.subject.SubjectFragment"
        android:label="@string/title_subjects"
        tools:layout="@layout/fragment_subject" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.s2dioapps.admindivinepolytechnic.ui.lesson.LessonFragment"
        android:label="@string/title_lessons"
        tools:layout="@layout/fragment_lesson" />
</navigation>